--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <div class="sidebar">
             <h1 id="bar"><i class="fa-solid fa-bars"></i>MY SIDEBAR</h1>
             <ul class="menu">
-                <li><a href="#"><i class="fa-solid fa-house"></i>Dashboard</a></li>
-                <li><a href="#"><i class="fa-solid fa-bell"></i></i>Notifications</a></li>
-                <li><a href="#"><i class="fa-solid fa-bars-progress"></i>Projects</a></li>
-                <li><a href="#"><i class="fa-solid fa-chart-simple"></i>Analytics</a></li>
-                <li><a href="#"><i class="fa-solid fa-heart"></i>Likes</a></li>
-                <li><a href="#"><i class="fa-solid fa-wallet"></i>Wallet</a></li>
-                <li><a href="#"><i class="fa-solid fa-message"></i>Messages</a></li><br><br>
-                <li><a href="#"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
-                <li><a href="#"><i class="fa-solid fa-gear"></i>Settings</a></li>
+                <li><a href="#"><i class="fa-solid fa-house"></i>Dashboard</a></li><hr>
+                <li><a href="#"><i class="fa-solid fa-bell"></i></i>Notifications</a></li><hr>
+                <li><a href="#"><i class="fa-solid fa-bars-progress"></i>Projects</a></li><hr>
+                <li><a href="#"><i class="fa-solid fa-chart-simple"></i>Analytics</a></li><hr>
+                <li><a href="#"><i class="fa-solid fa-heart"></i>Likes</a></li><hr>
+                <li><a href="#"><i class="fa-solid fa-wallet"></i>Wallet</a></li><hr>
+                <li><a href="#"><i class="fa-solid fa-message"></i>Messages</a></li><hr><br><br>
+                <li><a href="#"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li><hr>
+                <li><a href="#"><i class="fa-solid fa-gear"></i>Settings</a></li><hr>
             </ul>
         </div>
     </div>
